--- a/myindex.j2
+++ b/myindex.j2
@@ -1,3 +1,3 @@
 <h1> This is my index page </h1> 
-<h1> THis Node os is: {{ansile_os_family}} </h1>
+<h1> THis Node os is: {{ansible_os_family}} </h1>
 <h1> This Node java is:  {{myubuntujavapack}}</h1>
