--- a/myindex.j2
+++ b/myindex.j2
@@ -1,6 +1,6 @@
 <h1> This is my index page </h1> 
-<h1> THis Node os is: {{ansible_os_family}} </h1>
-<h1> This Node java is:  {{myubuntujavapack}}</h1>
+<h1> THis node os is: {{ansible_os_family}} </h1>
+<h1> This node java is:  {{myubuntujavapack}}</h1>
 
 
 
